# EYRgq9y

./: .replit  db.json  main.py  pyproject.toml
core/config/: con_database.py  external.json
core/database/static/EXT/: episodes.json  languages.json  movies.json  seasons.json  series.json
core/database/static/INT/: bot_father.json  channel_config.json  episodes.json  movies.json  seasons.json  series.json  sqlite_sequence.json
model/: bot_father.py  channel_config.py  episodes.py  movies.py  seasons.py  series.py
